  to a directory containing the test data required by the unit tests. It can
  be set by adding a ``test_data_dir`` entry to the ``Resources`` section of
  site.cfg. See `iris.config` for more details.

Bugs fixed
----------
* N/A

Incompatible changes
--------------------
* As part of simplifying the mechanism for accessing test data
  `iris.io.select_data_path()`, `iris.config.DATA_REPOSITORY`
  and `iris.config.MASTER_DATA_REPOSITORY` have been removed.

Deprecations
------------
* N/A


----------------------------


Release 1.3 (unreleased)
========================

Features added
--------------
* Experimental support for loading ABF/ABL files.
* Support in `iris.analysis.interpolate.linear` for longitude ranges
  other than [-180, 180].
* Support for customised CF profiles on export to netCDF.
* The documentation now includes guidance on how to cite Iris.
* The ability to calculate the exponential of a Cube, via
  `iris.analysis.maths.exp()`.
* Experimental support for concatenating Cubes along existing dimensions
  via `iris.experimental.concatenate.concatenate()`.

Bugs fixed
----------
* Printing a Cube now supports Unicode attribute values.
* PP export now sets LBMIN correctly.
* Converting between reference times now works correctly for
  units with non-Gregorian calendars.
* Slicing a CubeList now returns a CubeList instead of a normal list.

Incompatible changes
--------------------
* N/A

Deprecations
------------
* The boolean methods/properties on the `Unit` class have been updated
  to `is_...()` methods, in line with the project's naming conventions.

  ========================== ======================
  Deprecated property/method New method
  ========================== ======================
  convertible()              is_convertible()
  dimensionless              is_dimensionless()
  no_unit                    is_no_unit()
  time_reference             is_time_reference()
  unknown                    is_unknown()